# rust-form

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  deny.toml  enhance_components.sh  flake.nix  generate_100_components.sh  llm.txt  tarpaulin.toml  test-ui-kit-integration.yml  test_manifest_parsing.rs  testing.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deployment.yml  pr-quality.yml  release.yml  security.yml
ai/: tasks.json
ai/contexts/: cli-config-parsing.json  cli-foundation.json  codegen-engine.json  codegen-pipeline.json  codegen-templates.json  component-auth-implementation.json  component-system-foundation.json  component-testing-automation.json  db-sqlx-integration.json  inf-nix-environment.json  inf-project-setup.json  mvp-completion-status.json  template-hardcoding-fix-complete.md
ai/research/: component-system-research.md
ai/tasks/: cli-config-parsing.md  cli-foundation.md  codegen-pipeline.md  inf-project-setup.md
benches/: performance_tests.rs
components/auth/jwt-authentication/: CHANGELOG.md  Cargo.toml  README.md  handlers.rs.tera  middleware.rs.tera  models.rs.tera  rustform-component.yml
components/auth/jwt-authentication/docs/: api-reference.md  configuration.md  installation.md  migration-guide.md
components/auth/jwt-authentication/examples/: advanced-config.yml  basic-usage.yml  integration-test.yml
components/auth/jwt-authentication/src/: lib_test.rs
components/backend/compliance/gdpr-data-subject-rights/: component.yml
components/backend/observability/opentelemetry-integration/: component.yml
components/backend/observability/prometheus-metrics/: component.yml
coverage/: README.md
demos/: README.md  index.html
demos/admin-dashboard/: index.html
demos/auth-showcase/: index.html
demos/cms-blog/: index.html
demos/component-library/: index.html
demos/e-commerce-platform/: index.html  rustform.yml
demos/e-commerce-platform/frontend/: package.json
demos/e-commerce-platform/frontend/src/: ECommercePlatform.tsx
demos/payment-gateway/: index.html
docs/: ARCHITECTURE.md  COMPLETE_WORKFLOW_GUIDE.md  COMPLIANCE_FRAMEWORK.md  COMPONENT_LIBRARY_ARCHITECTURE.md  COMPONENT_MANIFEST_SCHEMA.md  COMPONENT_SYSTEM.md  COMPONENT_TASKS.md  COMPONENT_TESTING_STANDARDS.md  CONFIG_REFERENCE.md  CONFIG_SCHEMA.md  DEVELOPMENT.md  FRONTEND_GENERATION.md  GDPR_IMPLEMENTATION_GUIDE.md  GETTING_STARTED.md  HORIZONTAL_SCALING_ARCHITECTURE.md  MISSION_ACCOMPLISHED.md  OBSERVABILITY_FRAMEWORK.md  STUDIO_FEASIBILITY.md  TEMPLATES.md  TESTING_FRAMEWORK.md  VISUAL_EDITOR_ARCHITECTURE.md  YAML_LOGIC_INTEGRATION_DEMO.md
docs/kickoff/: Contribitbuting to Rust-form.md  Rust-form - Architecture Overview.md  Rust-form Project Roadmap.md  Rust-form.md
examples/: README.md  blog.yml  component-demo.yml  ecommerce-platform.yml  ecommerce.yml  invalid-config.yml  saas-analytics-platform.yml  todo-with-frontend.yml  todo.yml  versioned-config.yml
examples/components/ui-kit/: Cargo.toml  README.md  button.tera  card.tera  form.tera  input.tera  rustform-component.yml
examples/components/ui-kit/src/: lib_test.rs
examples/components/ui-kit/test-app/: rustform.yml
examples/custom-templates/: user-form.html.tera
generated_components/components/auth/jwt-authentication/: Cargo.toml
generated_components/components/auth/oauth2-integration/: Cargo.toml  README.md  rustform-component.yml
rustform-cli/: Cargo.toml
rustform-cli/proptest-regressions/cli/: tests.txt
rustform-cli/src/: cli.rs  error.rs  lib.rs  main.rs  runner.rs  tests.rs
rustform-cli/src/cli/: tests.rs
rustform-cli/src/commands/: component.rs  generate.rs  init.rs  mod.rs
rustform-codegen/: Cargo.toml
rustform-codegen/src/: context.rs  engine.rs  error.rs  lib.rs  pipeline.rs  pipeline_test.rs  tests.rs
rustform-codegen/src/docs/: doc_generator.rs  mod.rs
rustform-codegen/src/engine/: tests.rs
rustform-codegen/src/templates/: mod.rs  templates_dir.rs
rustform-codegen/src/testing/: mod.rs  test_generator.rs
rustform-codegen/templates/: Cargo.toml.tera  compliance_handlers.rs.tera  compliance_handlers_simple.rs.tera  compliance_models.rs.tera  component-flake.nix.tera.disabled  custom_logic.rs.tera  database.rs.tera  handlers.rs.tera  main.rs.tera  models.rs.tera  observability_main.rs.tera  observability_metrics.rs.tera  project-flake.nix.tera
rustform-codegen/templates/frontend/: api-client.ts.tera  hooks.ts.tera  types.ts.tera
rustform-codegen/templates/testing/: unit_test.rs.tera
rustform-core/: Cargo.toml
rustform-core/src/: compliance.rs  error.rs  lib.rs  types.rs
rustform-core/src/component/: cache.rs  fetcher.rs  integrity.rs  lockfile.rs  manifest.rs  mod.rs  resolver.rs  schema.rs  tests.rs  uri.rs
rustform-core/src/config/: day2_operations.rs  mod.rs  parser.rs  schema.rs  tests.rs  validation.rs
rustform-core/src/database/: connection.rs
rustform-core/src/error/: tests.rs
rustform-core/src/types/: tests.rs
rustform-studio/: README.md  rustform-studio.yml
templates/: main.rs.tera
templates/auth/: jwt_handler.rs.tera
test-component/: Cargo.toml  README.md  rustform-component.yml
test-component/src/: lib_test.rs
test-component/test-app/: rustform.yml
test-init-project/: .env.example  config.yml
test-todo-frontend/: .env.example  Cargo.toml  README.md
test-todo-frontend/frontend/: index.html  package.json
test-todo-frontend/frontend/src/: App.tsx
test-todo-frontend/migrations/: 001_initial.sql
test-todo-frontend/src/: error.rs  handlers.rs  main.rs  models.rs
tests/: cucumber_tests.rs  e2e_tests.rs  integration_tests.rs  property_tests.rs
tests/features/: compatibility.feature  component_testing.feature  generation.feature
tests/future_configs/: README.md  auth-service.yml  cms-platform.yml  ecommerce-advanced.yml  inventory-management.yml  social-media.yml
tools/: Cargo.toml  component_generator.py  component_generator.rs  component_library_cli.rs
(+832 files in other folders)
