[package]
name = "rustform-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code generation engine for Rustফর্ম"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Template engine
tera.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
include_dir.workspace = true
once_cell.workspace = true

# Internal dependencies
rustform-core = { path = "../rustform-core" }

# Error handling
thiserror.workspace = true
miette.workspace = true
anyhow.workspace = true

# Utilities
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
indexmap.workspace = true

[dev-dependencies]
# Unit testing
rstest = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
similar-asserts = { workspace = true }

# Integration testing
testcontainers = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# Mocking
mockall = { workspace = true }

# Test utilities
criterion = { workspace = true }