[package]
name = "rustform-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and utilities for Rustফর্ম"
keywords.workspace = true
categories.workspace = true

[features]
default = []
registry = []

[dependencies]
# Configuration parsing
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
validator.workspace = true
indexmap.workspace = true

# Database
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true

# Web framework (re-exports for generated code)
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true
anyhow.workspace = true

# Utilities
tracing.workspace = true
regex.workspace = true
dirs = "5.0"
semver = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
# Unit testing
rstest = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
similar-asserts = { workspace = true }

# Mocking
mockall = { workspace = true }

# Async testing
tokio-test = "0.4"